Added the beginning of a level management (level is saved and updated at every message sent)